--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html lang="cat">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/mago.png" />
